--- a/Diffuz/src/pages/contact/contact.html
+++ b/Diffuz/src/pages/contact/contact.html
@@ -14,4 +14,18 @@
       @ionicframework
     </ion-item>
   </ion-list>
+
+  <ion-icon name="eye"></ion-icon>
+  <ion-icon name="home"></ion-icon>
+  <ion-icon name="add-circle"></ion-icon>
+    <ion-icon name="chatbubbles"></ion-icon>
+     <ion-icon ios="ios-chatbubbles" md="md-chatbubbles"></ion-icon>
+      <ion-icon ios="ios-checkmark-circle-outline" md="md-checkmark-circle-outline"></ion-icon>
+      <ion-icon name="logo-facebook"></ion-icon>
+       <ion-icon name="heart"></ion-icon>
+       <ion-icon name="mail"></ion-icon>
+       <ion-icon ios="ios-trash" md="md-trash"></ion-icon>
+  <br>
+
+  <button ion-button class="customButton" menuToggle>Enregistrer</button>
 </ion-content>
