--- a/Diffuz/src/pages/home/home.html
+++ b/Diffuz/src/pages/home/home.html
@@ -1,6 +1,11 @@
 <ion-header>
-
+  <ion-navbar>
+    <ion-title>Diffuz</ion-title>
+  </ion-navbar>
 </ion-header>
 
 <ion-content padding class="customHomePage">
+  <button [navPush]="aboutPage" block>
+    <img src="assets/imgs/diffuz.png">
+  </button>
 </ion-content>
