--- a/Diffuz/src/pages/home/home.html
+++ b/Diffuz/src/pages/home/home.html
@@ -1,11 +1,14 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>Diffuz</ion-title>
-  </ion-navbar>
 </ion-header>
 
-<ion-content padding class="customHomePage">
-  <button [navPush]="aboutPage" block>
-    <img src="assets/imgs/diffuz.png">
-  </button>
-</ion-content>
+
+  <ion-slides pager>
+    <ion-slide class="slide1">
+      <h1>Slide 1</h1>
+    </ion-slide>
+    <ion-slide class="slide2">
+      <button [navPush]="aboutPage" block>
+        <img src="assets/imgs/diffuz.png">
+      </button>
+    </ion-slide>
+  </ion-slides>
