--- a/Diffuz/src/pages/defi/defi.html
+++ b/Diffuz/src/pages/defi/defi.html
@@ -12,11 +12,10 @@
 
 
   <ion-content padding class="customForm">
-
-    <ion-row>  <img src="assets/img/iphone.jpg"/></ion-row>
     <ion-row>
-        <h1>  Créez l'appli Mobile de Diffuz</h1>
+        <h1>  Créez l'appli Mobile <br>de Diffuz</h1>
     </ion-row>
+    <ion-row>  <img src="assets/imgs/iphone.jpg"/></ion-row>
 
     <p><strong>Le défi à relever</strong></p>
     <p>
@@ -29,27 +28,16 @@
       </p>
 
 
-      <ion-item>
-
-        <ion-icon name='musical-notes' item-start style="color: #d03e84"></ion-icon>
-
-        Participants
-
-        <ion-badge item-end>4</ion-badge>
-
+      <ion-item class="customForm">
+          <small>lancé par</small>
+        <ion-badge item-end>Micropole et la MACIF</ion-badge>
       </ion-item>
 
-
-      <ion-item>
-
-        <ion-icon name='logo-twitter' item-start style="color: #55acee"></ion-icon>
-
-        Temps à passer
-
+      <ion-item class="customForm">
+        <small>Temps à passer</small>
         <ion-badge item-end>Exigeant</ion-badge>
-
       </ion-item>
-
+      <p></p>
 
 
 </ion-content>
