--- a/Diffuz/src/pages/defi/defi.html
+++ b/Diffuz/src/pages/defi/defi.html
@@ -13,7 +13,7 @@
 
   <ion-content padding class="customForm">
 
-    <ion-row>  <img src="assets/img/iphone.jpg"/></ion-row>
+    <ion-row>  <img src="assets/imgs/iphone.jpg" style="margin:10px"/></ion-row>
     <ion-row>
         <h1>  Créez l'appli Mobile de Diffuz</h1>
     </ion-row>
