--- a/Diffuz/src/pages/home/home.html
+++ b/Diffuz/src/pages/home/home.html
@@ -4,11 +4,12 @@
 
   <ion-slides pager>
     <ion-slide class="slide1">
-      <h1>Slide 1</h1>
     </ion-slide>
     <ion-slide class="slide2">
-      <button [navPush]="aboutPage" block>
-        <img src="assets/imgs/diffuz.png">
-      </button>
+      <ion-fab left bottom>
+        <button [navPush]="aboutPage" block>
+          <img src="assets/imgs/go.svg" >
+        </button>
+      </ion-fab>
     </ion-slide>
   </ion-slides>
