--- a/Diffuz/src/pages/connexion/connexion.html
+++ b/Diffuz/src/pages/connexion/connexion.html
@@ -1,13 +1,26 @@
-<ion-content padding class="customFormFiltre">
-
-  <p>image à fournir - briques</p>
-
-  <button [navPush]="filterPage" block>
-    <img src="assets/imgs/diffuz.png">
-  </button>
-
-  <button [navPush]="aboutPage" block>
-    <img src="assets/imgs/diffuz.png">
-  </button>
-
+<ion-content  padding class="customFormFiltre">
+  <ion-grid>
+    <ion-row col8 offset-2>
+      <button block style="margin-top:10px;">
+        <img src="assets/imgs/diffuz.png">
+      </button>
+      <ion-chip style="width:220px; background-color: white;margin-top:10px;">
+        <ion-label>Continuer avec Google</ion-label>
+        <ion-icon name="logo-google" color="#e53357"></ion-icon>
+      </ion-chip>
+      <ion-chip  style="width:220px; background-color: white;margin-top:10px;">
+        <ion-label>Continuer avec Facebook</ion-label>
+        <button ion-button [navPush]="aboutPage">
+          <ion-icon name="logo-facebook" color="#e53357"></ion-icon>
+        </button>
+      </ion-chip>
+      <ion-chip  style="width:220px; background-color: white;margin-top:10px;">
+        <ion-label>Continuer avec Instagram</ion-label>
+        <ion-icon name="logo-instagram" color="#e53357"></ion-icon>
+      </ion-chip>
+      <p></p>
+      <small style="margin-top:10px;">En appuyant sur Continuer, Créer un compte j'accepte<br>
+      les conditions d'utilisation de la plateforme Diffuz</small>
+    </ion-row>
+  </ion-grid>
 </ion-content>
