Correction route bouton fb

--- a/Diffuz/src/pages/home/home.html
+++ b/Diffuz/src/pages/home/home.html
@@ -6,18 +6,10 @@
     <ion-slide class="slide1">
     </ion-slide>
     <ion-slide class="slide2">
-<<<<<<< HEAD
-      <ion-fab left bottom>
-        <button [navPush]="aboutPage" block>
-          <img src="assets/imgs/go.svg" >
-        </button>
-      </ion-fab>
-=======
-        <ion-fab center bottom >
-          <button [navPush]="connexionPage" block>
-            <img src="assets/imgs/diffuz.png">
+        <ion-fab bottom>
+          <button [navPush]="connexionPage" style="background-color:#052942">
+            <img src="assets/imgs/go.png" >
           </button>
         </ion-fab>
->>>>>>> 417121ef8e366061ed2a56688b4716a5b666318b
     </ion-slide>
   </ion-slides>
