--- a/Diffuz/src/pages/home/home.html
+++ b/Diffuz/src/pages/home/home.html
@@ -1,15 +1,16 @@
 <ion-header>
 </ion-header>
 
-
   <ion-slides pager>
     <ion-slide class="slide1">
     </ion-slide>
     <ion-slide class="slide2">
-        <ion-fab bottom>
-          <button [navPush]="connexionPage" style="background-color:#052942">
-            <img src="assets/imgs/go.png" >
-          </button>
+      <ion-row col6 offset-4>
+        <ion-fab bottom style="margin-bottom:30px;">
+            <button [navPush]="connexionPage" style="background-color:#052942">
+              <img src="assets/imgs/go.png" >
+            </button>
         </ion-fab>
+        </ion-row>
     </ion-slide>
   </ion-slides>
