--- a/Diffuz/src/pages/about/about.html
+++ b/Diffuz/src/pages/about/about.html
@@ -1,4 +1,41 @@
 <ion-content padding class="customFormFiltre">
+  <ion-row col2 offset-9>
+    <ion-fab >
+        <button [navPush]=" " style="background-color:white">
+          ma tronche
+        </button>
+    </ion-fab>
+  </ion-row>
+  <ion-row col6 offset-2>
+    <ion-fab>
+        <button [navPush]=" " style="margin-top:90px;">
+          je veux des amis
+        </button>
+    </ion-fab>
+  </ion-row>
 
-  
+  <ion-row col6 offset-3>
+    <ion-fab bottom>
+        <button bottom [navPush]="createdefiPage" class="titleLink">
+          Lancer<br>un defi
+        </button>
+    </ion-fab>
+  </ion-row>
+
+  <ion-row col6 offset-2>
+    <ion-fab>
+        <button [navPush]=" " class="titleLinkMe">
+          Chez moi
+        </button>
+    </ion-fab>
+    </ion-row>
+
+    <ion-row col4 offset-8>
+      <ion-fab bottom>
+          <button [navPush]="filterPage" style="background-color:#052942">
+             <ion-icon name="add-circle" class="customIcon"></ion-icon>
+          </button>
+      </ion-fab>
+    </ion-row>
+
 </ion-content>
