--- a/Diffuz/src/pages/filter/filter.html
+++ b/Diffuz/src/pages/filter/filter.html
@@ -1,25 +1,43 @@
 <ion-content padding class="customFormFiltre">
 
-    <ion-list >
+  <ion-row col12 >
+    <p class="title">Création de mon filtre</p>
+  </ion-row>
+
+  <ion-row col12>
+    <ion-list class="margin0">
+      <ion-label fixed>Nom du filtre</ion-label>
       <ion-item class="customField">
-        <ion-label>Nature du défi</ion-label>
+        <ion-input type="text" value=""></ion-input>
+      </ion-item>
+    </ion-list>
+  </ion-row>
+
+  <ion-row col12>
+    <ion-list class="margin0">
+      <ion-label>Nature du défi</ion-label>
+      <ion-item class="customField">
         <ion-select [(ngModel)]="relationship">
           <ion-option>sur internet</ion-option>
           <ion-option>sur le terrain</ion-option>
         </ion-select>
       </ion-item>
     </ion-list>
+  </ion-row>
 
-    <ion-list>
+  <ion-row col12>
+    <ion-list class="margin0">
+      <ion-label fixed>Region</ion-label>
       <ion-item class="customField">
-        <ion-label fixed>Region</ion-label>
         <ion-input type="text" value=""></ion-input>
       </ion-item>
     </ion-list>
+  </ion-row>
 
-    <ion-list>
+  <ion-row col12>
+    <ion-list class="margin0">
+      <ion-label>Theme</ion-label>
       <ion-item class="customField">
-        <ion-label>Theme</ion-label>
         <ion-select [(ngModel)]="theme" multiple="true">
           <ion-option>Aide aux personnes en difficulté</ion-option>
           <ion-option>Bien-être et santé</ion-option>
@@ -30,19 +48,34 @@
         </ion-select>
       </ion-item>
     </ion-list>
+  </ion-row>
 
-    <ion-list>
+  <ion-row col12>
+    <ion-list class="margin0">
+      <ion-label>Défi de mes amis</ion-label>
       <ion-item class="customField">
-        <ion-label fixed>Défi de mes amis</ion-label>
-        <ion-select></ion-select>
+        <ion-select>
+          <ion-option>Courir à un marathon</ion-option>
+          <ion-option>Participer à un hackathon</ion-option>
+          <ion-option>Coup de main solidaire</ion-option>
+        </ion-select>
       </ion-item>
     </ion-list>
+  </ion-row>
 
-    <ion-item class="customField">
+  <ion-row col12>
+    <ion-list class="margin0">
       <ion-label>Date</ion-label>
-      <ion-datetime displayFormat="MM/DD/YYYY" [(ngModel)]="myDate" ></ion-datetime>
-    </ion-item>
+      <ion-item class="customField">
+        <ion-datetime displayFormat="MM/DD/YYYY" [(ngModel)]="myDate" ></ion-datetime>
+      </ion-item>
+    </ion-list>
+  </ion-row>
 
-    <ion-icon class="customIcon" name="checkmark-circle"></ion-icon>
+  <ion-row bottom right col2 offset-10>
+    <button [navPush]="aboutPage" style="background-color: #F2F1EF">
+      <ion-icon class="customIcon" name="checkmark-circle"></ion-icon>
+    </button>
+  </ion-row>
 
 </ion-content>
