Ajout page suggestions

--- a/Diffuz/src/pages/about/about.html
+++ b/Diffuz/src/pages/about/about.html
@@ -24,7 +24,7 @@
 
   <ion-row col6 offset-2>
     <ion-fab>
-        <button [navPush]=" " class="titleLinkMe">
+        <button [navPush]="suggestionPage" class="titleLinkMe">
           Chez moi
         </button>
     </ion-fab>
