Auto stash before merge of "master" and "origin/master"
Modif

--- a/Diffuz/src/pages/about/about.html
+++ b/Diffuz/src/pages/about/about.html
@@ -1,7 +1,7 @@
 <ion-content padding class="customFormFiltre">
   <ion-row col2 offset-9>
     <ion-fab >
-        <button [navPush]=" " style="background-color:white">
+        <button [navPush]="myprofilPage" style="background-color:white">
           ma tronche
         </button>
     </ion-fab>
