--- a/Diffuz/src/pages/suggestion/suggestion.html
+++ b/Diffuz/src/pages/suggestion/suggestion.html
@@ -1,3 +1,10 @@
 <ion-header>
-  <p> Blabla </p>
 </ion-header>
+
+<ion-slides pager>
+  <ion-slide class="slide1">
+  </ion-slide>
+  <ion-slide class="slide2">
+
+  </ion-slide>
+</ion-slides>
