--- a/Diffuz/src/pages/connexion/connexion.html
+++ b/Diffuz/src/pages/connexion/connexion.html
@@ -1,4 +1,4 @@
-<ion-content  padding class="customFormFiltre">
+<ion-content padding class="customFormFiltre" no-bounce>
   <ion-grid>
     <ion-row col8 offset-2>
       <button block style="margin-top:30px;background-color:#052942">
