Ajout lien partout

--- a/Diffuz/src/pages/about/about.html
+++ b/Diffuz/src/pages/about/about.html
@@ -1,31 +1,31 @@
 <ion-content padding class="customFormFiltre">
-  <ion-row col2 offset-9>
+  <ion-row col2 offset-8>
     <ion-fab >
-        <button [navPush]="myprofilPage" style="background-color:white">
-          ma tronche
+        <button [navPush]="myprofilPage" class="boutonnvide">
+            .
         </button>
     </ion-fab>
   </ion-row>
-  <ion-row col6 offset-2>
+  <ion-row col6 offset-3>
     <ion-fab>
-        <button [navPush]=" " style="margin-top:90px;">
-          je veux des amis
+        <button [navPush]=" " class="boutonnvide" style="margin-top:110px;">
+          .
         </button>
     </ion-fab>
   </ion-row>
 
   <ion-row col6 offset-3>
     <ion-fab bottom>
-        <button bottom [navPush]="createdefiPage" class="titleLink">
-          Lancer<br>un defi
+        <button bottom [navPush]="createdefiPage" class="boutonnvide">
+            .
         </button>
     </ion-fab>
   </ion-row>
 
-  <ion-row col6 offset-2>
-    <ion-fab>
-        <button [navPush]="suggestionPage" class="titleLinkMe">
-          Chez moi
+  <ion-row col6 offset-3 >
+    <ion-fab bottom style="margin-bottom:130px;">
+        <button [navPush]="suggestionPage" class="boutonnvide">
+          coucou
         </button>
     </ion-fab>
     </ion-row>
