--- a/Diffuz/src/pages/about/about.html
+++ b/Diffuz/src/pages/about/about.html
@@ -8,7 +8,7 @@
   </ion-row>
   <ion-row col6 offset-3>
     <ion-fab>
-        <button [navPush]=" " class="boutonnvide" style="margin-top:110px;">
+        <button [navPush]="mycontactPage" class="boutonnvide" style="margin-top:110px;">
           .
         </button>
     </ion-fab>
