--- a/Diffuz/src/pages/mycontact/mycontact.html
+++ b/Diffuz/src/pages/mycontact/mycontact.html
@@ -1,6 +1,6 @@
 <ion-content padding class="customMyProfil">
   <ion-fab offset-4 bottom style="margin-bottom:20px;">
-    <button [navPush]="aboutPage" class="customButton">
+    <button [navPush]="mychatPage" class="customButton">
       Enregistrer
     </button>
   </ion-fab>
