sauvegarde modification liens boutons

--- a/Diffuz/src/pages/about/about.html
+++ b/Diffuz/src/pages/about/about.html
@@ -32,8 +32,8 @@
 
     <ion-row col4 offset-8>
       <ion-fab bottom>
-          <button [navPush]="filterPage" style="background-color:#052942">
-             <ion-icon name="add-circle" class="customIcon"></ion-icon>
+          <button [navPush]="filterPage" class="boutonnvide">
+             .
           </button>
       </ion-fab>
     </ion-row>
