--- a/Diffuz/src/pages/mycontact/mycontact.html
+++ b/Diffuz/src/pages/mycontact/mycontact.html
@@ -1,7 +1,7 @@
 <ion-content padding class="customMyProfil">
-  <ion-fab offset-4 bottom style="margin-bottom:20px;">
-    <button [navPush]="mychatPage" class="customButton">
-      Enregistrer
+  <ion-fab center bottom style="margin-bottom:5px;">
+    <button [navPush]="mychatPage" class="boutonnvide">
+      .
     </button>
   </ion-fab>
 </ion-content>
