--- a/Diffuz/src/pages/about/about.html
+++ b/Diffuz/src/pages/about/about.html
@@ -24,7 +24,7 @@
 
   <ion-row col6 offset-3 >
     <ion-fab bottom style="margin-bottom:130px;">
-        <button [navPush]="suggestionPage" class="boutonnvide">
+        <button [navPush]="favoritePage" class="boutonnvide">
           coucou
         </button>
     </ion-fab>
