--- a/Diffuz/src/pages/defi/defi.html
+++ b/Diffuz/src/pages/defi/defi.html
@@ -1,46 +1,6 @@
+  <ion-content>
 
-  <ion-header>
-
-    <ion-navbar style="background-color: #e53357; color:white;">
-
-      <ion-title>Coup de main solidaire </ion-title>
-
-    </ion-navbar>
-
-  </ion-header>
-
-
-
-  <ion-content padding class="customForm">
-
-    <ion-row>  <img src="assets/imgs/iphone.jpg" style="margin:10px"/></ion-row>
-
-    <ion-row>
-        <h1>  Créez l'appli Mobile <br>de Diffuz</h1>
-    </ion-row>
-    <ion-row>  <img src="assets/imgs/iphone.jpg"/></ion-row>
-
-    <p><strong>Le défi à relever</strong></p>
-    <p>
-        Développe une solution mobile pour la plateforme Diffuz. <br>
-        En effet, Diffuz est un réseau social facilitant la rencontre entre les particuliers et les associations en proposant une offre de micro-engagement.
-        Votre mission consiste à concevoir des usages mobiles afin de :<br>
-        - faciliter et valoriser l’expérience<br>
-        - favoriser le recrutement<br>
-        - fidéliser les diffuzeurs<br>
-      </p>
-
-
-      <ion-item class="customForm">
-          <small>lancé par</small>
-        <ion-badge item-end>Micropole et la MACIF</ion-badge>
-      </ion-item>
-
-      <ion-item class="customForm">
-        <small>Temps à passer</small>
-        <ion-badge item-end>Exigeant</ion-badge>
-      </ion-item>
-      <p></p>
-
+    <ion-img [navPush]="aboutPage" src="../assets/imgs/defiFull.jpg" no-repeat cover fixed >
+    </ion-img>
 
 </ion-content>
