--- a/Diffuz/src/pages/favorite/favorite.html
+++ b/Diffuz/src/pages/favorite/favorite.html
@@ -9,9 +9,16 @@
       </button>
     </ion-fab>
   </ion-slide>
-  <ion-slide class="slide4">
+
+  <ion-slide class="slide4" center>
     <ion-fab top>
       <button [navPush]="aboutPage" class="boutonnvide">
+        .
+      </button>
+    </ion-fab>
+
+    <ion-fab top center>
+      <button [navPush]="defiPage" class="linkfulldisplay">
         .
       </button>
     </ion-fab>
