--- a/Diffuz/src/pages/about/about.html
+++ b/Diffuz/src/pages/about/about.html
@@ -6,9 +6,18 @@
         </button>
     </ion-fab>
   </ion-row>
+
   <ion-row col6 offset-3>
     <ion-fab>
-        <button [navPush]="mycontactPage" class="boutonnvide" style="margin-top:110px;">
+        <button [navPush]="suggestionPage" class="boutonnvide" style="margin-top:105px;">
+          .
+        </button>
+    </ion-fab>
+  </ion-row>
+
+  <ion-row col6 offset-8>
+    <ion-fab>
+        <button [navPush]="mycontactPage" class="boutonnvide" style="margin-top:105px;">
           .
         </button>
     </ion-fab>
