--- a/Diffuz/src/pages/about/about.html
+++ b/Diffuz/src/pages/about/about.html
@@ -1,23 +1,23 @@
 <ion-content padding class="customFormFiltre">
   <ion-row col2 offset-8>
-    <ion-fab >
+    <ion-fab top >
         <button [navPush]="myprofilPage" class="boutonnvide">
             .
         </button>
     </ion-fab>
   </ion-row>
 
-  <ion-row col6 offset-3>
+  <ion-row col6 offset-2>
     <ion-fab>
-        <button [navPush]="suggestionPage" class="boutonnvide" style="margin-top:105px;">
+        <button [navPush]="mycontactPage" class="boutonnvide" style="margin-top:105px;">
           .
         </button>
     </ion-fab>
   </ion-row>
 
-  <ion-row col6 offset-8>
+  <ion-row col6 offset-9>
     <ion-fab>
-        <button [navPush]="mycontactPage" class="boutonnvide" style="margin-top:105px;">
+        <button [navPush]="suggestionPage" class="boutonnvide" style="margin-top:105px;">
           .
         </button>
     </ion-fab>
